WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115282
[WK2] Regression tests can't load HTTPS pages with NetworkProcess due to self-signed certificate
https://bugs.webkit.org/show_bug.cgi?id=115282
Summary
[WK2] Regression tests can't load HTTPS pages with NetworkProcess due to self...
Alexey Proskuryakov
Reported
2013-04-26 15:35:02 PDT
We have solutions for self-signed certificates when loading is in WebProcess (e.g. on Mac, we call +[NSURLRequest setAllowsAnyHTTPSCertificate:forHost:]). We need a solution for NetworkProcess too.
Attachments
Make WebKitTestRunner trust localhost
(6.46 KB, patch)
2014-07-30 18:38 PDT
,
mitz
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2014-07-30 18:38:12 PDT
Created
attachment 235794
[details]
Make WebKitTestRunner trust localhost
Alexey Proskuryakov
Comment 2
2014-07-31 09:26:29 PDT
Comment on
attachment 235794
[details]
Make WebKitTestRunner trust localhost View in context:
https://bugs.webkit.org/attachment.cgi?id=235794&action=review
> Tools/WebKitTestRunner/TestController.cpp:1263 > + // Any non-empty credential signals tp accept the server trust. Since the cross-platform API
Typo: "tp".
mitz
Comment 3
2014-07-31 09:45:59 PDT
(In reply to
comment #2
)
> (From update of
attachment 235794
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=235794&action=review
> > > Tools/WebKitTestRunner/TestController.cpp:1263 > > + // Any non-empty credential signals tp accept the server trust. Since the cross-platform API > > Typo: "tp".
Corrected! Fixed in <
http://trac.webkit.org/r171859
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug