[WK2] Regression tests can't load HTTPS pages with NetworkProcess due to self-signed certificate https://bugs.webkit.org/show_bug.cgi?id=115282

Reviewed by Sam Weinig.


Tools:
* WebKitTestRunner/TestController.cpp:
(WTR::TestController::canAuthenticateAgainstProtectionSpaceInFrame): Return true for any
local host server trust protection space.
(WTR::TestController::didReceiveAuthenticationChallengeInFrame): Respond with a non-empty
credential to server trust challenges.

LayoutTests:
* platform/mac-wk2/TestExpectations: Removed the exceptions listed under this bug.



Canonical link: https://commits.webkit.org/153337@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171859 268f45cc-cd09-0410-ab3c-d52691b4dbfc